vlib/v/checker/tests/array_method_invalid_expr.out
vlib/v/checker/tests/array_method_invalid_expr.vv:2:16: error: invalid expression, expected infix expr, lambda or function
    1 | runes := [`a`, `b`, `c`, `a`]
    2 | dump(runes.all(`a`))
      |                ~~~
    3 | dump(runes.any(`a`))
    4 | dump(runes.count(`a`))
vlib/v/checker/tests/array_method_invalid_expr.vv:3:16: error: invalid expression, expected infix expr, lambda or function
    1 | runes := [`a`, `b`, `c`, `a`]
    2 | dump(runes.all(`a`))
    3 | dump(runes.any(`a`))
      |                ~~~
    4 | dump(runes.count(`a`))
    5 | dump(runes.filter(`a`))
vlib/v/checker/tests/array_method_invalid_expr.vv:4:18: error: invalid expression, expected infix expr, lambda or function
    2 | dump(runes.all(`a`))
    3 | dump(runes.any(`a`))
    4 | dump(runes.count(`a`))
      |                  ~~~
    5 | dump(runes.filter(`a`))
vlib/v/checker/tests/array_method_invalid_expr.vv:5:19: error: invalid expression, expected infix expr, lambda or function
    3 | dump(runes.any(`a`))
    4 | dump(runes.count(`a`))
    5 | dump(runes.filter(`a`))
      |                   ~~~
