vlib/v/checker/tests/array_method_invalid_expr.vv
runes := [`a`, `b`, `c`, `a`]
dump(runes.all(`a`))
dump(runes.any(`a`))
dump(runes.count(`a`))
dump(runes.filter(`a`))
